MXS-4530 Add maxpgsql utility library

--- a/maxutils/CMakeLists.txt
+++ b/maxutils/CMakeLists.txt
@@ -1,3 +1,6 @@
 add_subdirectory(maxbase)
 add_subdirectory(maxsql)
 add_subdirectory(maxsimd)
+if(BUILD_POSTGRES)
+  add_subdirectory(maxpgsql)
+endif()
