--- a/server/modules/monitor/CMakeLists.txt
+++ b/server/modules/monitor/CMakeLists.txt
@@ -1,3 +1,6 @@
 add_subdirectory(galeramon)
 add_subdirectory(mariadbmon)
 add_subdirectory(xpandmon)
+if (BUILD_POSTGRES)
+    add_subdirectory(pgmon)
+endif()
